--- a/css/mobile.css
+++ b/css/mobile.css
@@ -19,8 +19,72 @@
     header h1{
         height: 100%;
         display: flex;
-        text-align: left;
+        text-align: center;
+        font-size: 4.0rem;
+        font-family: fantasy;
+        justify-content: left;
     }
+
+    .container{
+        display: none;
+        padding-bottom: 64px;
+        padding-top: 56px;
+        font-size: 1.6rem;
+    }
+
+    #diaria{
+        padding-top: 56px;
+        padding-bottom: 64px;
+    }
+
+    .conteudo{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .links{
+        text-decoration: none;
+        color: #000;
+    }
+
+    .conteudo figure{
+        width: 100%;
+        border-style: solid;
+        border-width: 0.5px;
+        border-color: #dcdcdc;
+        border-radius: 10px;
+        margin: 10px 10px;
+        background-color: #fff;
+        max-width: 350px;
+    }
+
+    .conteudo img{
+        width: 100%;
+        height: 250px;
+        border-radius: 10px;
+    }
+
+    .conteudo figcaption{
+        height: 35px;
+        padding: 5px 15px 10px 15px;
+        max-height: 35px;
+        text-align: justify;
+    }
+
+    #todas{
+        padding-top: 56px;
+        padding-bottom: 64px;
+    }
+
+    #avaliar{
+        padding-top: 56px;
+        padding-bottom: 64px;
+    }
+
+
+
 
     nav{
         background-color: white;
@@ -69,31 +133,8 @@
         justify-content: center;
     }
 
-    .container{
-        display: none;
-        padding-bottom: 64px;
-        padding-top: 56px;
-    }
-
-    #diaria{
-        width: 100%;
-        height: 1000px;
-        
-        padding-top: 56px;
-        color: black;
-    }
-
-    #todas{
-        padding-top: 56px;
-        width: 100%;
-        height: 1000px;
-       
-    }
-
-    #avaliar{
-        padding-top: 56px;
-        width: 100%;
-        height: 1000px;
+    nav ul li span{
+        font-size: 1.8rem;
     }
 
     .visible{
