--- a/css/reset.css
+++ b/css/reset.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+html{
+    font-size: 50%;
+}
+
 ul{
     list-style: none;
 }
@@ -10,3 +14,4 @@ ul{
 .visible{
     display: block;
 }
+
