--- a/css/mobile.css
+++ b/css/mobile.css
@@ -27,14 +27,10 @@
 
     .container{
         display: none;
-        padding-bottom: 64px;
-        padding-top: 56px;
         font-size: 1.6rem;
-    }
-
-    #diaria{
-        padding-top: 56px;
+        padding-top: 66px;
         padding-bottom: 64px;
+        font-weight: bold;
     }
 
     .conteudo{
@@ -49,43 +45,144 @@
         color: #000;
     }
 
-    .conteudo figure{
-        width: 100%;
+    #principais section{
+        margin-bottom: 10px;
+    }
+    #principais .conteudo figure{
+        width: 95%;
         border-style: solid;
         border-width: 0.5px;
         border-color: #dcdcdc;
         border-radius: 10px;
-        margin: 10px 10px;
         background-color: #fff;
-        max-width: 350px;
+        max-width: 500px;
+        padding-bottom: 10px;
     }
 
-    .conteudo img{
+    #principais .conteudo img{
         width: 100%;
         height: 250px;
+        border-radius: 10px 10px 0 0;
+    }
+
+    #principais .conteudo figcaption{
+
+        padding: 0 10px 0 10px;
+        text-align: justify;
+        height: 34px;
+        overflow: hidden;
+    }
+
+    #barra-pesquisa{
+        height: 30px;
+        padding: 0 10px;
+        width: 90%;
+        border-style: solid;
+        border-width: 0.2px;
+        border-radius: 10px 0 0 10px;
+        border-right-style: none;
+        border-color: #dcdcdc;
+        font-size: 1.6rem;
+    }
+    
+    .barra {
+        max-width: 500px;
+        padding: 0 10px;
+        margin: 0 auto;
+        height: 30px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+    
+    .barra button{
+        z-index: 1px;
+        width: 30px;
+        height: 32px;
+        padding: 0;
+        border-radius: 0px 10px 10px 0;
+        border-style: solid;
+        border-width: 0.2px;
+        border-color: #dcdcdc;
+        text-align: center;
+    }
+    
+    .barra button figure{
+        height: 24px;
+        width: 24px;
+    }
+    
+    #barra-pesquisa:focus{
+        outline-style: none;
+    }
+    
+    #barra-pesquisa:focus::placeholder {
+        color: transparent;
+    }
+    
+    #barra-pesquisa::placeholder{
+        text-align: center;
+    }
+
+    #voltar{
+        margin-left: 10px;
+        height: 30px;
+        text-align: center;
+        padding: 0;
+        border-radius: 10px;
+        width: 100px;
+        background-color: #fff;
+        margin-bottom: 10px;
+    }
+
+    #voltar img{
+        width: 24px;
+        height: 24px;
+    }
+
+    #todas .conteudo{
+        margin-bottom: 10px;
+    }
+    #todas .conteudo figure{
+        width: 95%;
+        border-style: solid;
+        border-width: 0.5px;
+        border-color: #dcdcdc;
+        border-radius: 10px;
+        background-color: #fff;
+        max-width: 480px;
+        display: flex;
+        flex-direction: row;
+        padding: 10px;
+    }
+
+    #todas .conteudo img{
+        min-height: 100px;
+        max-height: 100px;
+
+        min-width: 125px;
+        max-width: 125px;
+
+        background-color: black;
         border-radius: 10px;
     }
-
-    .conteudo figcaption{
-        height: 35px;
-        padding: 5px 15px 10px 15px;
-        max-height: 35px;
-        text-align: justify;
+    #todas .conteudo figcaption{
+        max-height: 85px;
+        padding: 7.5px 10px;
+        overflow: hidden;
     }
 
-    #todas{
-        padding-top: 56px;
-        padding-bottom: 64px;
+    .conteudo span textarea{
+        text-align: center;
+    }
+    table{
+        width: 100%;
     }
 
-    #avaliar{
-        padding-top: 56px;
-        padding-bottom: 64px;
+    td{
+        padding: 0 10px;
     }
-
-
-
-
     nav{
         background-color: white;
         height: 64px;
@@ -93,6 +190,7 @@
         position: fixed;
         bottom: 0;
     }
+
     nav ul{
         display: flex;
         flex-direction: row;
