--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,1 +1,50 @@
+body{
+    background-color: #F0F8FF;
+}
 
+header{
+    background-color: white;
+    height: 46px;
+    padding: 5px;
+    font-size: 18px;
+    border-bottom-style: solid;
+    border-width: 1px;
+    border-color: #dcdcdc;
+    top: 0;
+    position: fixed;
+    width: 100%;
+}
+
+header h1{
+    height: 100%;
+    display: flex;
+    text-align: center;
+    font-size: 4.0rem;
+    font-family: fantasy;
+    justify-content: left;
+}
+
+.container{
+    display: none;
+    font-size: 1.6rem;
+    padding-top: 66px;
+    padding-bottom: 64px;
+    font-weight: bold;
+    overflow: hidden;
+    animation-name: slide;
+    animation-duration: 0.5s;
+}
+
+@keyframes slide{
+    from{
+        margin-left: 100%;
+    }
+    to{
+        margin-left: 0%;
+    }
+}
+
+
+nav{
+    display: none;
+}
