--- a/css/estilo.css
+++ b/css/estilo.css
@@ -13,6 +13,9 @@ header{
     top: 0;
     position: fixed;
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
 }
 
 header h1{
@@ -22,13 +25,62 @@ header h1{
     font-size: 4.0rem;
     font-family: fantasy;
     justify-content: left;
+    align-items: center;
 }
+
+nav ul{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    justify-content: flex-start;
+    padding: 0;
+    margin-right: 10px;
+    align-items: end;
+    cursor: default;
+
+}
+
+nav ul li:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+nav ul li{
+    width: 120px;
+    text-align: center;
+    font-size: 2.0rem;
+    padding: 5px 0;
+
+}
+
+nav ul li span{
+    padding: 5px;
+}
+
+.selecionado span{
+    color: #000;
+    transition: ease-in-out;
+    transform: scale(1.1);
+    font-weight: bold;
+}
+
+
+
+nav ul li figure{
+    display: none;
+}
+
+
+#avaliar{
+    overflow: hidden;
+}
+
 
 .container{
     display: none;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     padding-top: 66px;
-    padding-bottom: 64px;
     font-weight: bold;
     overflow: hidden;
     animation-name: slide;
@@ -45,6 +97,217 @@ header h1{
 }
 
 
-nav{
-    display: none;
+#principais section{
+    margin-bottom: 10px;
+}
+#principais .conteudo figure{
+    width: 95%;
+    border-style: solid;
+    border-width: 0.5px;
+    border-color: #dcdcdc;
+    border-radius: 10px;
+    background-color: #fff;
+    max-width: 800px;
+    padding-bottom: 10px;
+    margin: 0 auto;
+}
+
+#principais .conteudo img{
+    width: 100%;
+    height: 500px;
+    border-radius: 10px 10px 0 0;
+}
+
+#principais .conteudo figcaption{
+
+    padding: 0 10px 0 10px;
+    text-align: justify;
+    height: 101.5px;
+    overflow: hidden;
+}
+
+#principais h6{
+    font-size: 1.8rem;
+    overflow: hidden;
+    height: 86px;
+    text-align: justify;
+}
+
+
+
+#barra-pesquisa{
+    height: 40px;
+    padding: 0 10px;
+    width: 95%;
+    border-style: solid;
+    border-width: 0.2px;
+    border-radius: 10px 0 0 10px;
+    border-right-style: none;
+    border-color: #dcdcdc;
+    font-size: 1.8rem;
+}
+
+.barra {
+    max-width: 1020px;
+    margin: 0 auto;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.barra button{
+    z-index: 1px;
+    width: 50px;
+    height: 42px;
+    padding: 0;
+    border-radius: 0px 10px 10px 0;
+    border-style: solid;
+    border-width: 0.2px;
+    border-color: #dcdcdc;
+    text-align: center;
+}
+
+.barra button img{
+    height: 24px;
+    width: 24px;
+    margin: auto;
+}
+
+#barra-pesquisa:focus{
+    outline-style: none;
+}
+
+#barra-pesquisa:focus::placeholder {
+    color: transparent;
+}
+
+#barra-pesquisa::placeholder{
+    text-align: center;
+}
+
+#voltar{
+    margin-left: 20%;
+    height: 40px;
+    text-align: center;
+    padding: 0;
+    border-radius: 10px;
+    width: 100px;
+    background-color: #fff;
+    margin-bottom: 10px;
+    border-style: solid;
+    border-color: #dcdcdc;
+    border-width: 0.01px;
+}
+
+#voltar img{
+    width: 24px;
+    height: 24px;
+}
+
+
+#todas h6{
+    text-align: justify;
+    height: 122.8px;
+    font-size: 1.8rem;
+}
+
+
+#todas .conteudo figure{
+    width: 95%;
+    border-style: solid;
+    border-width: 0.5px;
+    border-color: #dcdcdc;
+    border-radius: 10px;
+    background-color: #fff;
+    max-width: 1000px;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    margin: 0 auto 10px;
+}
+
+#todas .conteudo img{
+    min-height: 150px;
+    max-height: 150px;
+
+    min-width: 225px;
+    max-width: 225px;
+
+    background-color: black;
+    border-radius: 10px;
+}
+#todas .conteudo figcaption{
+    height: 140px;
+    padding: 5px 10px;
+}
+
+.conteudo span textarea{
+    text-align: center;
+}
+table{
+    width: 100%;
+}
+
+td{
+    padding: 0 10px;
+}
+
+
+#avaliar{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.avaliacao{
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.avaliacao div{
+    width: 100%;
+    text-align: center;
+}
+
+.avaliacao label{
+    font-weight: initial;
+    font-size: 2..0rem;
+}
+
+#nome:focus::placeholder, #comentario:focus::placeholder{
+    color: transparent;
+}
+
+#nome, #classificacao, #comentario{
+    height: 42px;
+    font-size: 1.8rem;
+    font-family: 'Times New Roman', Times, serif;
+    border-radius: 10px;
+    border-width: 1px;
+    border-color: #dcdcdc;
+    border-style: solid;
+    margin-bottom: 20px;
+    padding: 0 10px;
+    background-color: #fff;
+}
+
+#comentario{
+    height: 80px;
+    padding-top: 10px;
+}
+
+#enviar{
+    width: 100px;
+    height: 38px;
+    border-radius: 10px;
+    border-width: 1px;
+    border-style: solid;
+    background-color: #fff;
+    border-color: #dcdcdc;
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+    
 }
