--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,11 @@
 @media(min-width: 280px) and (max-width: 1000px){
     
 
+
+    header h1{
+        width: 100%;
+    }
+
     .conteudo{
         display: flex;
         flex-direction: column;
@@ -8,173 +13,12 @@
 
     }
 
-    .links{
-        text-decoration: none;
-        color: #000;
-    }
-
-    #principais section{
-        margin-bottom: 10px;
-    }
-    #principais .conteudo figure{
-        width: 95%;
-        border-style: solid;
-        border-width: 0.5px;
-        border-color: #dcdcdc;
-        border-radius: 10px;
-        background-color: #fff;
-        max-width: 500px;
-        padding-bottom: 10px;
-    }
-
-    #principais .conteudo img{
-        width: 100%;
-        height: 250px;
-        border-radius: 10px 10px 0 0;
-    }
-
-    #principais .conteudo figcaption{
-
-        padding: 0 10px 0 10px;
-        text-align: justify;
-        height: 51.5px;
-        overflow: hidden;
-    }
-
-    #principais h6{
-        font-size: 1.6rem;
-        overflow: hidden;
-        height: 35px;
-        text-align: justify;
+    .container{
+        padding-bottom: 64px;
     }
 
 
-
-    #barra-pesquisa{
-        height: 40px;
-        padding: 0 10px;
-        width: 90%;
-        border-style: solid;
-        border-width: 0.2px;
-        border-radius: 10px 0 0 10px;
-        border-right-style: none;
-        border-color: #dcdcdc;
-        font-size: 1.6rem;
-    }
-    
-    .barra {
-        max-width: 500px;
-        padding: 0 10px;
-        margin: 0 auto;
-        height: 40px;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        margin-bottom: 10px;
-    }
-    
-    .barra button{
-        z-index: 1px;
-        width: 50px;
-        height: 42px;
-        padding: 0;
-        border-radius: 0px 10px 10px 0;
-        border-style: solid;
-        border-width: 0.2px;
-        border-color: #dcdcdc;
-        text-align: center;
-    }
-    
-    .barra button img{
-        height: 24px;
-        width: 24px;
-        margin: auto;
-    }
-    
-    #barra-pesquisa:focus{
-        outline-style: none;
-    }
-    
-    #barra-pesquisa:focus::placeholder {
-        color: transparent;
-    }
-    
-    #barra-pesquisa::placeholder{
-        text-align: center;
-    }
-
-    #voltar{
-        margin-left: 10px;
-        height: 30px;
-        text-align: center;
-        padding: 0;
-        border-radius: 10px;
-        width: 100px;
-        background-color: #fff;
-        margin-bottom: 10px;
-    }
-
-    #voltar img{
-        width: 24px;
-        height: 24px;
-    }
-
-    #todas .conteudo{
-        margin-bottom: 10px;
-    }
-
-    #todas h6{
-        text-align: justify;
-        height: 73px;
-        font-size: 1.6rem;
-        overflow: hidden;
-    }
-
-    .a-figure{
-        font-weight: normal;
-        color: black;
-    }
-
-    #todas .conteudo figure{
-        width: 95%;
-        border-style: solid;
-        border-width: 0.5px;
-        border-color: #dcdcdc;
-        border-radius: 10px;
-        background-color: #fff;
-        max-width: 480px;
-        display: flex;
-        flex-direction: row;
-        padding: 10px;
-    }
-
-    #todas .conteudo img{
-        min-height: 100px;
-        max-height: 100px;
-
-        min-width: 125px;
-        max-width: 125px;
-
-        background-color: black;
-        border-radius: 10px;
-    }
-    #todas .conteudo figcaption{
-        max-height: 90px;
-        padding: 5px 10px;
-        overflow: hidden;
-    }
-
-    .conteudo span textarea{
-        text-align: center;
-    }
-    table{
-        width: 100%;
-    }
-
-    td{
-        padding: 0 10px;
-    }
-    nav{
+      nav{
         display: block;
         background-color: white;
         height: 64px;
@@ -188,9 +32,11 @@
         flex-direction: row;
         padding: 5px;
         height: 54px;
+        align-items: center;
     }
     
     nav ul li{
+        font-size: 1.8rem;
         width: 33.3%;
         text-align: center;
         min-width: 53px;
@@ -199,10 +45,22 @@
         justify-content: center;
     }
 
+    nav ul li:hover{
+        text-decoration: initial;
+    }
+
     .icons{
         width: 24px;
         height: 24px;
     }
+
+    .selecionado span{
+        text-shadow: black 0.1px 0.1px;
+        transition: none;
+        transform: none;
+        font-weight: normal;
+    }
+
 
     .selecionado figure{
         background-color: #6495ED;
@@ -211,9 +69,6 @@
         transform: scale(1.05);
     }
 
-    .selecionado span{
-        text-shadow: black 0.1px 0.1px;
-    }
 
     nav ul li figure{
         width: 74px;
@@ -227,20 +82,91 @@
         font-size: 1.8rem;
     }
 
-    .visible{
-        display: block;
+    #principais section{
+        margin-bottom: 10px;
+    }
+    #principais .conteudo figure{
+        max-width: 500px;
+        padding-bottom: 5px;
     }
 
-    #avaliar{
-        padding-left: 10px;
-        padding-right: 10px;
+    #principais .conteudo img{
+        width: 100%;
+        height: 250px;
+        border-radius: 10px 10px 0 0;
+    }
+
+    #principais .conteudo figcaption{
+
+        padding: 0 10px 0 10px;
+        text-align: justify;
+        height: 52.5px;
+        overflow: hidden;
+    }
+
+    #principais span{
+        font-size: 1.6rem;
+    }
+
+    #principais h6{
+        font-size: 1.6rem;
+        overflow: hidden;
+        height: 35px;
+        text-align: justify;
+    }
+
+
+
+    #barra-pesquisa{
+        font-size: 1.6rem;
+    }
+    
+    .barra {
+        max-width: 500px;
+    }
+
+    #voltar{
+        height: 38px;
+    }
+
+    #todas .conteudo{
+        margin-bottom: 5px;
+    }
+
+    #todas h6{
+        text-align: justify;
+        height: 73px;
+        font-size: 1.6rem;
+        overflow: hidden;
+    }
+
+    #todas span{
+        font-size: 1.6rem;
+    }
+
+    .a-figure{
+        font-weight: normal;
+        color: black;
+    }
+
+    #todas .conteudo figure{
+        width: 95%;
+        max-width: 480px;
+    }
+
+    #todas .conteudo img{
+        min-height: 100px;
+        max-height: 100px;
+
+        min-width: 125px;
+        max-width: 125px;
+
+        background-color: black;
+        border-radius: 10px;
     }
 
     .avaliacao{
         max-width: 500px;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
     }
 
     .avaliacao div{
@@ -253,38 +179,13 @@
         font-size: 1.8rem;
     }
 
-    #nome:focus::placeholder, #comentario:focus::placeholder{
-        color: transparent;
-    }
 
     #nome, #classificacao, #comentario{
-        height: 42px;
         font-size: 1.6rem;
-        font-family: 'Times New Roman', Times, serif;
-        border-radius: 10px;
-        border-width: 1px;
-        border-color: #dcdcdc;
-        border-style: solid;
-        margin-bottom: 20px;
-        padding: 0 10px;
-        background-color: #fff;
-    }
-
-    #comentario{
-        height: 80px;
-        padding-top: 10px;
     }
 
     #enviar{
-        width: 100px;
-        height: 38px;
-        border-radius: 10px;
-        border-width: 1px;
-        border-style: solid;
-        background-color: #fff;
-        border-color: #dcdcdc;
         font-size: 1.6rem;
-        margin-bottom: 20px;
         
     }
 
