--- a/css/reset.css
+++ b/css/reset.css
@@ -11,10 +11,15 @@ ul{
     list-style: none;
 }
 
+
+.noticias{
+   display: none;
+}
+
 .visible{
     display: block;
 }
 
-.noticias{
-    display: none;
+body{
+    z-index: 1px;
 }
