--- a/css/estilo.css
+++ b/css/estilo.css
@@ -155,6 +155,7 @@ nav ul li figure{
     flex-direction: row;
     justify-content: center;
     margin-bottom: 10px;
+    padding: 0 10px;
 }
 
 .barra button{
