--- a/css/estilo.css
+++ b/css/estilo.css
@@ -188,10 +188,13 @@ nav ul li figure{
     text-align: center;
 }
 
+#page2 .barra{
+    justify-content: flex-start;
+
+}
+
 #voltar{
-    margin-left: 20%;
     height: 40px;
-    text-align: center;
     padding: 0;
     border-radius: 10px;
     width: 100px;
